<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <groupId>org.zkit.support</groupId>
        <artifactId>boot-dependencies</artifactId>
        <version>0.0.1-SNAPSHOT</version>
        <relativePath/>
    </parent>
    <modelVersion>4.0.0</modelVersion>
    <artifactId>server</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>Easy Kit Server</name>
    <packaging>pom</packaging>

    <properties>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <modules>
        <module>server-account</module>
        <module>server-ai</module>
        <module>server-mail</module>
        <module>server-assets</module>
    </modules>

    <dependencies>
        <dependency>
            <groupId>org.zkit.support</groupId>
            <artifactId>boot-starter</artifactId>
            <version>0.0.1-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.zkit.support</groupId>
            <artifactId>cloud-starter</artifactId>
            <version>0.0.1-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.zkit.support</groupId>
            <artifactId>throttler-starter</artifactId>
            <version>0.0.1-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.zkit.support</groupId>
            <artifactId>tracing-starter</artifactId>
            <version>0.0.1-SNAPSHOT</version>
            <type>pom</type>
        </dependency>
        <dependency>
            <groupId>org.zkit.support</groupId>
            <artifactId>logstash-starter</artifactId>
            <version>0.0.1-SNAPSHOT</version>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>easy-kit</id>
            <url>https://r.zkit.org/repository/maven-public/</url>
        </repository>
    </repositories>
    <distributionManagement>
        <repository>
            <id>easy-kit</id>
            <url>https://r.zkit.org/repository/maven-releases/</url>
        </repository>
        <snapshotRepository>
            <id>easy-kit</id>
            <url>https://r.zkit.org/repository/maven-snapshots/</url>
        </snapshotRepository>
    </distributionManagement>
</project>
